syntax = "proto3";
package TerraformStation;

message TFCommandInput {
    string command = 1;
}

message TFCommandResult {
    string result = 1;
}
